--- a/04 ■► React/final-app/src/pages/MyCart/index.module.scss
+++ b/04 ■► React/final-app/src/pages/MyCart/index.module.scss
@@ -31,6 +31,26 @@
             font-weight: 600;
             font-style: normal;
         }
+        &_button {
+            background-color: var(--buttons-color);
+            color: var(--link-color);
+            width: auto;
+            height: 30px;
+            border: 1px solid var(--borders-color);
+            transition: var(--quick-fx);
+            border-radius: 4px;
+            padding: 5px;
+            &:hover {
+                background-color: var(--buttons-hover-color);
+                scale: 1.05;
+                color: var(--link-hover-color);
+            }
+            &:active {
+                transition: var(--instant-fx);
+                background-color: var(--buttons-active-color);
+                color: var(--link-active-color);
+            }
+        }
     }
     &__container {
         width: 1400px;
@@ -81,7 +101,10 @@
             }
             &_title {
                 width: 100%;
+                font-size: 14px;
                 font-weight: 600;
+                height: 14px;
+                overflow: auto;
             }
             &__price {
                 width: 100%;
