--- a/04 ■► React/final-app/src/pages/ItemView/index.module.css
+++ b/04 ■► React/final-app/src/pages/ItemView/index.module.css
@@ -1,7 +1,7 @@
 .itemview {
   z-index: 1;
   width: 100%;
-  height: 600px;
+  height: 920px;
   border: none;
   background-color: var(--default-bg-color);
   color: var(--text-color);
@@ -143,4 +143,65 @@
   transition: var(--instant-fx);
   background-color: var(--buttons-active-color);
   color: var(--link-active-color);
+}
+.itemview__related {
+  width: 1400px;
+  height: auto;
+}
+.itemview__related_header {
+  color: var(--text-color);
+  font-size: 28px;
+  font-weight: 600;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  border: none;
+  border-left: 5px solid var(--link-hover-color);
+  letter-spacing: 2px;
+  margin: 20px 0px 20px 25px;
+  padding-left: 10px;
+}
+.itemview__related_container {
+  width: 100%;
+  height: 240px;
+  border: none;
+  border-top: 2px solid var(--borders-color);
+  display: flex;
+  gap: 80px;
+  justify-content: center;
+  align-items: center;
+  transition: var(--quick-fx);
+}
+.itemview__related_container__alert {
+  font-size: 20px;
+}
+.itemview__related_container__card {
+  margin-top: 20px;
+  width: 200px;
+  height: 220px;
+  border: 1px solid var(--borders-color);
+  border-radius: 4px;
+  overflow: hidden;
+}
+.itemview__related_container__card:hover {
+  scale: 1.02;
+}
+.itemview__related_container__card_image {
+  width: 200px;
+  height: 200px;
+}
+.itemview__related_container__card_image__content {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.itemview__related_container__card_title {
+  width: 100%;
+  font-size: 14px;
+  font-weight: 600;
+  height: 14px;
+  overflow: auto;
+  color: var(--text-color);
 }/*# sourceMappingURL=index.module.css.map */
