--- a/04 ■► React/final-app/src/pages/ItemView/index.module.scss
+++ b/04 ■► React/final-app/src/pages/ItemView/index.module.scss
@@ -1,7 +1,7 @@
 .itemview {
     z-index: 1;
     width: 100%; // 100%
-    height: 600px;
+    height: 920px;
     // border: 1px solid var(--borders-color);
     border: none;
     background-color: var(--default-bg-color);
@@ -139,6 +139,67 @@
                         background-color: var(--buttons-active-color);
                         color: var(--link-active-color);
                     }
+                }
+            }
+        }
+    }
+    &__related {
+        width: 1400px;
+        height: auto;
+        // border: 2px solid var(--borders-color);
+        &_header {
+            color: var(--text-color);
+            font-size: 28px;
+            font-weight: 600;
+            width: 100%;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            border: none;
+            border-left: 5px solid var(--link-hover-color);
+            letter-spacing: 2px;
+            margin: 20px 0px 20px 25px; // top right bottom left
+            padding-left: 10px;
+        }
+        &_container {
+            width: 100%;
+            height: 240px;
+            border: none;
+            border-top: 2px solid var(--borders-color);
+            display: flex;
+            gap: 80px;
+            justify-content: center;
+            align-items: center;
+            transition: var(--quick-fx);
+            &__alert {
+                font-size: 20px;
+            }
+            &__card {
+                margin-top: 20px;
+                width: 200px;
+                height: 220px;
+                border: 1px solid var(--borders-color);
+                border-radius: 4px;
+                overflow: hidden;
+                &:hover {
+                    scale: 1.02;
+                }
+                &_image {
+                    width: 200px;
+                    height: 200px;
+                    &__content {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+                &_title {
+                    width: 100%;
+                    font-size: 14px;
+                    font-weight: 600;
+                    height: 14px;
+                    overflow: auto;
+                    color: var(--text-color);
                 }
             }
         }
