--- a/04 ■► React/final-app/src/pages/ItemView/index.module.scss
+++ b/04 ■► React/final-app/src/pages/ItemView/index.module.scss
@@ -59,7 +59,7 @@
             }
             &__category {
                 font-size: 24px;
-                opacity: 0.5;
+                // opacity: 0.5;
                 font-style: italic;
             }
             &__description {
