--- a/04 ■► React/final-app/src/pages/MyFav/index.module.scss
+++ b/04 ■► React/final-app/src/pages/MyFav/index.module.scss
@@ -19,7 +19,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        opacity: 0.9;
+        // opacity: 0.9;
         padding: 10px 0px 10px 0px; // top right bottom left
         &_header {
             font-size: 24px;
