--- a/04 ■► React/final-app/src/pages/MyCart/index.module.scss
+++ b/04 ■► React/final-app/src/pages/MyCart/index.module.scss
@@ -20,7 +20,7 @@
         justify-content: center;
         align-items: center;
         gap: 200px;
-        opacity: 0.9;
+        // opacity: 0.9;
         padding: 10px 0px 10px 0px; // top right bottom left
         &_header {
             font-size: 24px;
