--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -340,6 +340,7 @@
                     margin-left: 50px;
                     transition: var(--quick-fx);
                     width: fit-content;
+                    position: relative;
                     #fa_symbols {
                         margin-right: 5px;
                     }
@@ -355,6 +356,22 @@
                         #fa_symbols {
                             color: var(--link-active-color);
                         }
+                    }
+                    &_fav {
+                        position: absolute;
+                        bottom: 0px;
+                        left: -10px;
+                        font-size: 12px;
+                        font-weight: 600;
+                        color: rgb(255,0,0);
+                    }
+                    &_cart {
+                        position: absolute;
+                        bottom: 0px;
+                        left: -10px;
+                        font-size: 12px;
+                        font-weight: 600;
+                        color: rgb(255,0,0);
                     }
                 }
             }
