--- a/04 ■► React/final-app/src/components/Header/index.module.css
+++ b/04 ■► React/final-app/src/components/Header/index.module.css
@@ -7,6 +7,34 @@
           backdrop-filter: blur(5px);
   border: none;
 }
+@media only screen and (max-width: var(--extra-small-device)) {
+  .header .header {
+    width: var(--extra-small-device);
+    background-color: red;
+    display: none;
+  }
+}
+@media only screen and (max-width: var(--mobile-device)) {
+  .header .header {
+    width: var(--mobile-device);
+    background-color: red;
+    display: none;
+  }
+}
+@media only screen and (max-width: var(--tablet-device)) {
+  .header .header {
+    width: var(--tablet-device);
+    background-color: red;
+    display: none;
+  }
+}
+@media only screen and (max-width: var(--desktop-device)) {
+  .header .header {
+    width: var(--desktop-device);
+    background-color: red;
+    display: none;
+  }
+}
 .header__list {
   z-index: 2;
   position: relative;
