--- a/04 ■► React/final-app/src/components/Header/index.module.scss
+++ b/04 ■► React/final-app/src/components/Header/index.module.scss
@@ -6,34 +6,6 @@
     background-color: var(--header-bg-color);
     backdrop-filter: blur(5px);
     border: none;
-    @media only screen and (max-width: var(--extra-small-device)) {
-        .header {
-            width: var(--extra-small-device);
-            background-color: red;
-            display: none;
-        }
-    };
-    @media only screen and (max-width: var(--mobile-device)) {
-        .header {
-            width: var(--mobile-device);
-            background-color: red;
-            display: none;
-        }
-    };
-    @media only screen and (max-width: var(--tablet-device)) {
-        .header {
-            width: var(--tablet-device);
-            background-color: red;
-            display: none;
-        }
-    };
-    @media only screen and (max-width: var(--desktop-device)) {
-        .header {
-            width: var(--desktop-device);
-            background-color: red;
-            display: none;
-        }
-    };
     // top navbar side of the header
     &__list {
         z-index: 2;
@@ -406,3 +378,389 @@
         }
     }
 }
+
+@media only screen and (max-width: var(--extra-small-device)) {
+    .header {
+        // header overall container
+        z-index: 10;
+        width: 100%; // 100vh, 100vw, 1424px, 100%, rem
+        height: auto;
+        background-color: var(--header-bg-color);
+        backdrop-filter: blur(5px);
+        border: none;
+        // top navbar side of the header
+        &__list {
+            z-index: 2;
+            position: relative;
+            width: 100%;
+            height: 40px;
+            background-color: transparent;
+            border: none;
+            border-bottom: 1px solid var(--borders-color);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 60px;
+            background-color: var(--header-top-color);
+            box-sizing: content-box;
+            &_buttons {
+                // border: 1px solid red;
+                box-sizing: content-box;
+                height: 100%;
+                border: none;
+                // border-bottom: 1px solid var(--text-negative-color);
+                background-color: transparent;
+                cursor: pointer;
+                color: var(--text-negative-color);
+                font-size: 14px;
+                font-weight: 600;
+                text-transform: capitalize;
+                transition: var(--quick-fx);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 5px;
+                #fa_caret {
+                    color: var(--text-negative-color);
+                    margin: 0px 0px 0px 5px; // top right bottom left
+                    scale: 0.8;
+                    rotate: 180deg;
+                    transition: var(--quick-fx);
+                }
+                &:hover {
+                    scale: 1.01;
+                    color: var(--link-hover-color);
+                    border-bottom: 1px solid var(--link-hover-color);
+                    filter: drop-shadow(0 0 3px var());
+                    #fa_caret {
+                        rotate: 0deg;
+                        color: var(--link-hover-color);
+                    }
+                }
+                &:active {
+                    transition: var(--instant-fx);
+                    color: var(--link-active-color);
+                    border-bottom: 1px solid var(--link-active-color);
+                    filter: drop-shadow(0 0 8px var());
+                    #fa_caret {
+                        rotate: 0deg;
+                        color: var(--link-active-color);
+                    }
+                }
+            }
+            &_productsdropdown {
+                z-index: 3;
+                position: absolute;
+                top: 100%;
+                left: 30%;
+                width: auto;
+                height: auto;
+                display: flex; // flex or none
+                visibility: hidden; // visible or hidden
+                opacity: 0.0; // 1.0 or 0.0
+                transform: translate(0, -100%); // (0%, 0%) or (0%, -100%)
+                transition: ease-in-out 0.2s;
+                justify-content: center;
+                align-items: flex-start;
+                padding: 20px 60px 20px 20px; // top right bottom left
+                gap: 80px;
+                border: 1px solid var(--borders-color);
+                background-color: var(--default-bg-color);
+                filter: drop-shadow(0 0 2px var(--filter-shadow-color));
+                &__columns {
+                    display: flex;
+                    flex-direction: column;
+                    width: 33%;
+                    &_header {
+                        color: var(--text-color);
+                        font-size: 18px;
+                        font-weight: 900;
+                        margin-left: 30px;
+                        text-transform: uppercase;
+                        letter-spacing: 2px;
+                        margin-bottom: 15px;
+                    }
+                    &_items {
+                        color: var(--link-color);
+                        font-weight: 600;
+                        cursor: pointer;
+                        margin-left: 30px;
+                        transition: var(--quick-fx);
+                        width: fit-content;
+                        &:not(:last-of-type) {
+                            margin-bottom: 5px;
+                        }
+                        &:hover {
+                            color: var(--link-hover-color);
+                        }
+                        &:active {
+                            transition: var(--instant-fx);
+                            color: var(--link-active-color);
+                        }
+                    }
+                    &_discount {
+                        color: var(--link-color);
+                        font-size: 18px;
+                        font-weight: 900;
+                        cursor: pointer;
+                        margin-left: 30px;
+                        text-transform: uppercase;
+                        transition: var(--quick-fx);
+                        width: fit-content;
+                        &:hover {
+                            color: var(--link-hover-color);
+                        }
+                        &:active {
+                            transition: var(--instant-fx);
+                            color: var(--link-active-color);
+                        }
+                    }
+                }
+            }
+        }
+        // bottom main side of the header
+        &__main{
+            width: 100%;
+            height: 100px; //60px
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0 20px;
+            font-size: 14px;
+            font-weight: 600;
+            background: var(--header-bg-color);
+            border: none;
+            border-bottom: 1px solid var(--borders-color);
+            padding: 0 5%;
+            &_logo {
+                border: none;
+                width: 60px;
+                height: 100%;
+                overflow: hidden;
+                display: flex;
+                align-items: center;
+                scale: 1.5;
+                margin-right: 10px;
+                &__content {
+                    width: 100%;
+                    object-fit: cover;
+                    object-position: center;
+                    filter: invert(0);
+                }
+            }
+            &_langbar {
+                height: 100%;
+                width: 200px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                #fa_globe {
+                    width: auto;
+                    height: 30px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding-bottom: 2px;
+                    margin-right: 5px;
+                    color: var(--text-color);
+                }
+                &__selector {
+                    width: auto;
+                    height: 30px;
+                    padding: 2px;
+                    background-color: transparent;
+                    outline: none;
+                    border: none;
+                    font-weight: 600;
+                    color: var(--text-color);
+                    &_options {
+                        font-weight: 600;
+                        background-color: var(--default-bg-color);
+                        &:checked {
+                            color: var(--default-color);
+                        }
+                    }
+                }
+            }
+            &_search {
+                height: 100%;
+                width: 500px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                &__input {
+                    padding-left: 10px;
+                    width: 70%;
+                    height: 30px;
+                    border: 1px solid var(--borders-color);
+                    outline: none;
+                    border-top-left-radius: 4px;
+                    border-bottom-left-radius: 4px;
+                    color: var(--searchbar-color);
+                    background-color: var(--searchbar-bg);
+                    font-weight: 600;
+                }
+                &__button {
+                    width: 50px;
+                    height: 30px;
+                    border-top-right-radius: 4px;
+                    border-bottom-right-radius: 4px;
+                    background-color: var(--buttons-color);
+                    border: 1px solid var(--link-color);
+                    transition: var(--quick-fx);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    #fa_glass {
+                        color: var(--link-color);
+                    }
+                    &:hover {
+                        background-color: var(--buttons-hover-color);
+                        border: 1px solid var(--link-hover-color);
+                        #fa_glass {
+                            color: var(--link-hover-color);
+                        }
+                    }
+                    &:active {
+                        transition: var(--instant-fx);
+                        background-color: var(--buttons-active-color);
+                        border: 1px solid var(--link-active-color);
+                        #fa_glass {
+                            color: var(--link-active-color);
+                        }
+                    }
+                }
+            }
+            &_switch {
+                height: 100%;
+                width: 100px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin: 0px 75px;
+                &__slider {
+                    position: relative;
+                    width: 40px;
+                    height: 20px;
+                    border: 1px solid var(--borders-color);
+                    border-radius: 10.5px;
+                    box-sizing: content-box;
+                    margin: 0 10px;
+                    background-color: var(--link-hover-color);
+                    &_button {
+                        position: absolute;
+                        top: 0%;
+                        left: 0%; // 100%
+                        transform: translateX(0%); // -95%
+                        width: 20px;
+                        height: 20px;
+                        border: 1px solid var(--borders-color);
+                        border-radius: 50%;
+                        background-color: var(--default-color);
+                        scale: 1.05;
+                        transition: var(--slow-fx);
+                    }
+                }
+                #fa_sun {
+                    transition: var(--slow-fx);
+                    scale: 1.8; // 1.0
+                    opacity: 0.9; // 0.5
+                    color: var(--link-color);
+                }
+                #fa_moon {
+                    transition: var(--slow-fx);
+                    scale: 1.0; // 1.8
+                    opacity: 0.5; // 0.9
+                    color: var(--link-color);
+                }
+            }
+            &_userpanel {
+                height: 100%;
+                width: 200px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                // flex-wrap: wrap;
+                // border: 1px solid red;
+                cursor: pointer;
+                position: relative;
+                box-sizing: content-box;
+                &__image {
+                    width: 40px;
+                    height: 40px;
+                    border: 1px solid var(--borders-color);
+                    border-radius: 50%;
+                }
+                &__status {
+                    margin-left: 10px;
+                    font-weight: 600;
+                    color: var(--text-color);
+                }
+                &_dropdown {
+                    z-index: -1;
+                    position: absolute;
+                    top: 100%;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    width: 200px;
+                    height: auto;
+                    display: flex; // flex or none
+                    visibility: hidden; // visible or hidden
+                    opacity: 0.0; // 1.0 or 0.0
+                    transform: translate(-50%, -100%); // (-50%, 0%) or (-50%, -100%)
+                    transition: ease-in-out 0.2s;
+                    padding: 10px 0px;
+                    gap: 10px;
+                    border: 1px solid var(--borders-color);
+                    background-color: var(--default-bg-color);
+                    filter: drop-shadow(0 0 10px var(--filter-shadow-color));
+                    flex-direction: column;
+                    &__items {
+                        font-weight: 600;
+                        color: var(--link-color);
+                        cursor: pointer;
+                        margin-left: 50px;
+                        transition: var(--quick-fx);
+                        width: fit-content;
+                        position: relative;
+                        #fa_symbols {
+                            margin-right: 5px;
+                        }
+                        &:hover {
+                            color: var(--link-hover-color);
+                            #fa_symbols {
+                                color: var(--link-hover-color);
+                            }
+                        }
+                        &:active {
+                            transition: var(--instant-fx);
+                            color: var(--link-active-color);
+                            #fa_symbols {
+                                color: var(--link-active-color);
+                            }
+                        }
+                        &_fav {
+                            position: absolute;
+                            bottom: 0px;
+                            left: -10px;
+                            font-size: 12px;
+                            font-weight: 600;
+                            color: rgb(255,0,0);
+                        }
+                        &_cart {
+                            position: absolute;
+                            bottom: 0px;
+                            left: -10px;
+                            font-size: 12px;
+                            font-weight: 600;
+                            color: rgb(255,0,0);
+                        }
+                    }
+                }
+            }
+        }
+    }
+};
+@media only screen and (max-width: var(--mobile-device)) {};
+@media only screen and (max-width: var(--tablet-device)) {};
+@media only screen and (max-width: var(--desktop-device)) {};
